crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_input_mode_startswith.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "input",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            AutoComplete,
        ),
        String(
            "list",
        ),
    ),
    (
        Aria(
            Expanded,
        ),
        String(
            "false",
        ),
    ),
    (
        Aria(
            HasPopup,
        ),
        String(
            "listbox",
        ),
    ),
    (
        EnterKeyHint,
        String(
            "search",
        ),
    ),
    (
        Id,
        String(
            "mode-input",
        ),
    ),
    (
        Role,
        String(
            "combobox",
        ),
    ),
    (
        Type,
        String(
            "text",
        ),
    ),
    (
        Value,
        String(
            "",
        ),
    ),
]
