crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_input_open.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "input",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            ActiveDescendant,
        ),
        String(
            "combo-item-1",
        ),
    ),
    (
        Aria(
            AutoComplete,
        ),
        String(
            "list",
        ),
    ),
    (
        Aria(
            Expanded,
        ),
        String(
            "true",
        ),
    ),
    (
        Aria(
            HasPopup,
        ),
        String(
            "listbox",
        ),
    ),
    (
        Aria(
            Invalid,
        ),
        String(
            "true",
        ),
    ),
    (
        Aria(
            Required,
        ),
        String(
            "true",
        ),
    ),
    (
        Aria(
            Controls,
        ),
        String(
            "combo-content",
        ),
    ),
    (
        Aria(
            DescribedBy,
        ),
        String(
            "combo-error-message combo-description",
        ),
    ),
    (
        EnterKeyHint,
        String(
            "search",
        ),
    ),
    (
        Id,
        String(
            "combo-input",
        ),
    ),
    (
        Role,
        String(
            "combobox",
        ),
    ),
    (
        Placeholder,
        String(
            "Search fruit",
        ),
    ),
    (
        Type,
        String(
            "text",
        ),
    ),
    (
        Value,
        String(
            "ap",
        ),
    ),
]
