crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_item_indicator_selected.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.item_indicator_attrs(&key(1)))
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "item-indicator",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Data(
            "ars-state",
        ),
        String(
            "selected",
        ),
    ),
    (
        Aria(
            Hidden,
        ),
        String(
            "true",
        ),
    ),
]
