crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_item_selected_highlighted.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.item_attrs(&key(1)))
---
[
    (
        Data(
            "ars-highlighted",
        ),
        Bool(
            true,
        ),
    ),
    (
        Data(
            "ars-part",
        ),
        String(
            "item",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Data(
            "ars-state",
        ),
        String(
            "selected",
        ),
    ),
    (
        Data(
            "ars-value",
        ),
        String(
            "Apple",
        ),
    ),
    (
        Aria(
            Selected,
        ),
        String(
            "true",
        ),
    ),
    (
        Id,
        String(
            "combo-item-1",
        ),
    ),
    (
        Role,
        String(
            "option",
        ),
    ),
]
