crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_item_text.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.item_text_attrs(&key(1)))
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "item-text",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Id,
        String(
            "combo-item-1-text",
        ),
    ),
]
