crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_label.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.label_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "label",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Id,
        String(
            "combo-label",
        ),
    ),
    (
        For,
        String(
            "combo-input",
        ),
    ),
]
