crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_live_region.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.live_region_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "live-region",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            Atomic,
        ),
        String(
            "true",
        ),
    ),
    (
        Aria(
            Live,
        ),
        String(
            "polite",
        ),
    ),
]
