crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_positioner.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.positioner_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "positioner",
        ),
    ),
    (
        Data(
            "ars-placement",
        ),
        String(
            "bottom",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
]
