crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_root_disabled.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
[
    (
        Data(
            "ars-disabled",
        ),
        Bool(
            true,
        ),
    ),
    (
        Data(
            "ars-part",
        ),
        String(
            "root",
        ),
    ),
    (
        Data(
            "ars-readonly",
        ),
        Bool(
            true,
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Data(
            "ars-state",
        ),
        String(
            "closed",
        ),
    ),
    (
        Id,
        String(
            "disabled",
        ),
    ),
]
